adding basic db stuff and models
